--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 .event-box,
 .event-card {
   /* border: 1px solid red; */
@@ -11,12 +13,13 @@
 .slide {
   flex: 0 0 100%;
   display: none;
+  
+  
 }
 
 .slide.active {
   display: block;
 }
-/* 
-* {
-  border: solid 1px red;
-} */
+  /* *{
+    border: solid 1px red;
+  }  */
